--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,9 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.34.0</version> <!-- Укажите здесь актуальную версию -->
+            <version>3.45.1.0</version>
         </dependency>
     </dependencies>
-
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
